--- a/Practika2/Practika2.csproj
+++ b/Practika2/Practika2.csproj
@@ -20,8 +20,8 @@
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
     </PackageReference>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
-    <PackageReference Include="Eremex.Avalonia.Controls" Version="1.0.98" />
     <PackageReference Include="MessageBox.Avalonia" Version="3.3.0" />
+    <PackageReference Include="MessageBox.Avalonia.Markdown" Version="3.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
